crates/cribo/tests/snapshots/execution_results@xfail_pydantic_project.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_pydantic_project/main.py
---
ExecutionResults {
    status: Success,
    stdout: "",
    stderr: "",
}
