crates/cribo/tests/snapshots/execution_results@xfail_simple_nested_handler.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_simple_nested_handler/main.py
---
ExecutionResults {
    status: Success,
    stdout: "",
    stderr: "",
}
