crates/cribo/tests/snapshots/execution_results@xfail_stdlib_hoisting_aliases.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_stdlib_hoisting_aliases/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "Initializing logger module...",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 82, in <module>",
}
