crates/cribo/tests/snapshots/execution_results@xfail_stdlib_name_conflict_ordering.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_stdlib_name_conflict_ordering/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 110, in <module>",
}
