crates/cribo/tests/snapshots/execution_results@xfail_stickytape_explicit_relative_import_from_parent_package.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_stickytape_explicit_relative_import_from_parent_package/main.py
---
ExecutionResults {
    status: Success,
    stdout: "",
    stderr: "",
}
